# project-builder-examples

./: README.md
Building.Projects.With.CMake/: README.md
Building.Projects.With.CMake/src/ch001/动态库/: Makefile0
CMake.Cookbook/: README.md
Managing.Projects.With.GUN.Make/: README.md
Modern.CMake.For.Cpp/examples/ch01/01-hello/: build.sh
Modern.CMake.For.Cpp/examples/ch04/05-structure/src/lib2/: lib2.h
Modern.CMake.For.Cpp/examples/ch14/00-test-export-simple/: CMakeLists.txt  main.cpp
Modern.CMake.For.Cpp/examples/ch14/01-export-simple/src/: CMakeLists.txt
Modern.CMake.For.Cpp/examples/ch14/05-install-directories/src/include/calc/: calc.h
Modern.CMake.For.Cpp/examples/ch14/07-install-export/: CMakeLists.txt
